# ok-c-kernel

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  grub.cfg  kernel.s  keyboard.c  kmain.c  link.ld  post_build.sh
include/: freestanding.h  kernel.h  liboxyk.h
include/kernel/: com.h  gdt.h  keyboard.h  kshell.h  memdump.h  system.h  vga.h
libk/: Makefile  libk.h  memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
src/: boot.asm  grub.cfg  kmain.c  linker.ld
src/com/: com1.c
src/gdt/: gdt.c  gdt_flush.asm
src/keyboard/: keyboard.c
src/kshell/: cmd_parse.c  prompt.c
src/liboxyk/: getsp.c  inb.c  isalnum.c  isalpha.c  isascii.c  isdigit.c  islower.c  isprint.c  isspace.c  isupper.c  memcpy.c  memmove.c  memset.c  outb.c  strcpy.c  strlen.c  strncmp.c
src/memdump/: memdump.c
src/system/: reboot.c
src/vga/: clear_screen.c  cursor.c  kdraw.c  kputchar.c  kputnbr.c  kputstr.c  reset_cursor.c  scrolling.c  vga.c  write_on_screen.c
